samples/_failures_safe/1760884677_c2a908_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f11de57.c: In function ‘main’:
./samples/SAFE/__tmp_5f11de57.c:125:12: error: missing terminating " character
  125 |     printf("Matrix A:\
      |            ^~~~~~~~~~~
./samples/SAFE/__tmp_5f11de57.c:125:5: error: expected expression at end of input
  125 |     printf("Matrix A:\
      |     ^~~~~~
./samples/SAFE/__tmp_5f11de57.c:125:5: error: expected declaration or statement at end of input
